samples/_failures_safe/1761140186_63aa02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a767189.c: In function ‘main’:
./samples/SAFE/__tmp_2a767189.c:158:19: error: expected ‘]’ at end of input
  158 |     char input[102
      |                   ^
      |                   ]
./samples/SAFE/__tmp_2a767189.c:158:5: error: expected declaration or statement at end of input
  158 |     char input[102
      |     ^~~~
